# gjallarbru

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-crates.toml  rust-toolchain.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
crates/gjallarbru-core/: Cargo.toml  LICENSE-MIT  README.md
crates/gjallarbru-core/src/: lib.rs
crates/gjallarbru-crypto/: Cargo.toml  README.md
crates/gjallarbru-crypto/src/: lib.rs
crates/gjallarbru-runtime/: Cargo.toml
crates/gjallarbru-runtime/src/: lib.rs
crates/gjallarbru-server/: Cargo.toml
crates/gjallarbru-server/src/: main.rs
crates/gjallarbru-server/tests/: foundation.rs
crates/gjallarbru-wire/: Cargo.toml  README.md
crates/gjallarbru-wire/src/: lib.rs
docs/: CRATE_VERSION_MATRIX.md  IMPLEMENTATION_PLAN.md  RELEASE_PLAN.md  SCOPE.md  VERSION_PLAN.md  github-security-settings.md  licensing.md  modularity-policy.md  platform-support.md  rfc-source-policy.md  security-controls.md  supply-chain-security.md  threat-model.md  toolchain-policy.md  unsafe-policy.md
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md
requirements/: BASE_REQUIREMENTS.json  ERRATA.json  README.md  SCHEMA.json
rfc/: README.md  SHA256SUMS  SOURCES
sbom/: gjallarbru.spdx.json
scripts/: check-packages.sh  check-rust-version-matrix.sh  check_doc_links.sh  check_latest_tools.sh  check_shell_syntax.sh  checks.sh  compare_sbom.py  fetch-rfcs.sh  generate-sbom.sh  lock-rfcs.sh  release_0_1_gate.sh  release_0_2_gate.sh  release_crates.py  requirements.py  rfc_errata.py  test-crate-documentation.py  test-foundation-dependency-surface.py  test-release-crates.py  test-release-readiness.sh  test-requirements.py  test-rfc-sources.py  test-sbom-compare.py  test-tooling-policy.py  validate-modularity-policy.sh  validate-release-metadata.sh  validate-release-plan.py  validate-release-readiness.sh  validate-requirements.sh  validate-security-policy.sh  verify-rfcs.sh
security/pentest/: README.md  v0.1.0.md  v0.2.0.md
