[workspace]
members = [
    "crates/gjallarbru-core",
    "crates/gjallarbru-crypto",
    "crates/gjallarbru-runtime",
    "crates/gjallarbru-server",
    "crates/gjallarbru-wire",
]
default-members = ["crates/gjallarbru-server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Gjallarbru contributors"]
homepage = "https://github.com/valkyoth/gjallarbru"
repository = "https://github.com/valkyoth/gjallarbru"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unused_must_use = "deny"
missing_docs = "deny"

[workspace.lints.clippy]
panic = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
undocumented_unsafe_blocks = "forbid"
indexing_slicing = "forbid"
arithmetic_side_effects = "forbid"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"

[workspace.dependencies]
gjallarbru-core = { path = "crates/gjallarbru-core", version = "0.1.0" }
gjallarbru-crypto = { path = "crates/gjallarbru-crypto", version = "0.1.0" }
gjallarbru-runtime = { path = "crates/gjallarbru-runtime", version = "0.1.0" }
gjallarbru-wire = { path = "crates/gjallarbru-wire", version = "0.1.0" }

[profile.release]
overflow-checks = true
panic = "abort"
strip = "symbols"

